--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,10 +4,15 @@
 {% block title %}Log In{% endblock title %}
 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Log In</button>
-</form>
+<div class="card bg-dark bg-opacity-75 text-white mx-auto" style="max-width: 500px;">
+    <div class="card-body">
+        <h2 class="card-title mb-4">Log In</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary w-100">Log In</button>
+            <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
+        </form>
+    </div>
+</div>
 {% endblock content %}
