--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,5 +1,6 @@
 <!--  templates/registration/signup.html -->
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Sign Up{% endblock title %}
 
@@ -9,7 +10,7 @@
         <h2 class="card-title mb-4">Sign Up</h2>
         <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {% crispy form %}
             <button type="submit" class="btn btn-primary w-100">Sign Up</button>
         </form>
     </div>
