Refactor auth forms with crispy forms and fix signup/login flow

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -5,13 +5,12 @@
 {% block title %}Sign Up{% endblock title %}
 
 {% block content %}
-<div class="card bg-dark bg-opaccity-75 text-white mx-auto" style="max-width: 500px;">
+<div class="card bg-dark bg-opacity-75 text-white mx-auto" style="max-width: 500px;">
     <div class="card-body">
         <h2 class="card-title mb-4">Sign Up</h2>
-        <form method="post">
+        <form method="post" action="{% url 'signup' %}">
             {% csrf_token %}
             {% crispy form %}
-            <button type="submit" class="btn btn-primary w-100">Sign Up</button>
         </form>
     </div>
 </div>
