--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,11 +8,10 @@
 <div class="card bg-dark bg-opacity-75 text-white mx-auto" style="max-width: 500px;">
     <div class="card-body">
         <h2 class="card-title mb-4">Log In</h2>
-        <form method="post">
+        <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             {% crispy form %}
-            <button type="submit" class="btn btn-primary w-100">Log In</button>
-            <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
+            <p>Don't have an account? <a href="{% url 'users:signup' %}">Sign up here</a></p>
         </form>
     </div>
 </div>
