Update project with .env.example, static files, and scripts

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,9 +11,10 @@
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             {{ form|crispy }}
-            <p>Don't have an account? <a href="{% url 'users:signup' %}">Sign up here</a></p>
+            <button type="submit" class="btn btn-primary mt-3 w-100">Log In</button>
+            <p class="mt-3">Don't have an account? <a href="{% url 'users:signup' %}">Sign up here</a></p>
         </form>
-        <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+        <p class="mt-3"><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
     </div>
 </div>
 {% endblock content %}
